fix gaps for tablet

--- a/css/styles.css
+++ b/css/styles.css
@@ -124,6 +124,10 @@ img {
     pointer-events: auto;
   }
 
+  .container {
+    height: 100%;
+  }
+
   .mobile-menu-container {
     position: relative;
     padding-top: 80px;
@@ -145,22 +149,27 @@ img {
   }
 
   .list-mobile-menu {
-    margin-bottom: 284px;
+    /* margin-bottom: 284px; */
+    margin-bottom: auto;
   }
 
-  .list-mobile-menu-item {
+  .list-mobile-menu-link {
+    font-family: "Roboto";
     color: var(--dark-color);
     font-weight: 700;
     font-size: 36px;
     letter-spacing: 0.02em;
     line-height: 1.11;
     display: inline-block;
-    padding-bottom: 40px;
     transition: color var(--transition-duration-and-func);
   }
 
+  .list-mobile-menu-item {
+    margin-bottom: 40px;
+  }
+
   .list-mobile-menu-item-last {
-    padding-bottom: 0;
+    margin-bottom: 0;
   }
 
   .list-mobile-menu-item:hover,
@@ -176,16 +185,21 @@ img {
   .address-mobile-menu-tel {
     display: block;
     color: var(--primary-brand-color);
+    font-family: "Roboto";
     font-weight: 700;
     font-size: 36px;
     line-height: 1.11;
     letter-spacing: 0.02em;
+  }
+
+  .address-list-item-tel {
     margin-bottom: 40px;
   }
 
   .address-mobile-menu-email {
     display: block;
     font-weight: 500;
+    font-family: "Roboto";
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
@@ -223,6 +237,12 @@ img {
     display: block;
     fill: var(--light-color);
   }
+}
+
+.header {
+  border-bottom: 1px solid var(--accent-color);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .container {
@@ -865,12 +885,6 @@ img {
     display: none;
   }
 
-  .header {
-    border-bottom: 1px solid var(--accent-color);
-    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-      0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
-  }
-
   .header-container {
     display: flex;
     padding-bottom: 0;
@@ -910,6 +924,10 @@ img {
     color: var(--pressed-state-color);
   }
 
+  .current {
+    color: var(--pressed-state-color);
+  }
+
   .current::after {
     content: "";
     position: absolute;
@@ -927,7 +945,14 @@ img {
     margin-left: auto;
   }
 
+  .header-container {
+    padding-top: 0;
+  }
+
   .header-contact {
+    font-family: "Roboto";
+    font-weight: 400;
+    font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em;
     color: var(--primary-text-color);
@@ -963,11 +988,13 @@ img {
   .list-directions {
     display: flex;
     flex-wrap: wrap;
-    gap: 24px;
+    row-gap: 72px;
+    column-gap: 24px;
   }
 
   .list-directions-item {
     width: 356px;
+    margin-bottom: 0;
   }
 
   .title-direction {
@@ -978,7 +1005,8 @@ img {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 24px;
+    row-gap: 72px;
+    column-gap: 24px;
   }
 
   .list-images-item {
@@ -992,11 +1020,12 @@ img {
   }
 
   .container-customers-tablet {
-    width: 552px;
+    width: 584px;
   }
 
   .customers-list {
-    gap: 24px;
+    row-gap: 72px;
+    column-gap: 24px;
   }
 
   .customers-list-item {
@@ -1006,12 +1035,21 @@ img {
   .logo-part {
     margin-left: 0;
     margin-right: 0;
+    margin-bottom: 0;
     text-align: start;
   }
 
   .container-footer {
     display: flex;
     align-items: baseline;
+    flex-wrap: wrap;
+    max-width: 584px;
+    row-gap: 72px;
+    column-gap: 24px;
+  }
+
+  .social-media {
+    margin-bottom: 0;
   }
 
   .modal {
@@ -1024,12 +1062,6 @@ img {
 
   .send-email-label {
     margin-right: 24px;
-  }
-
-  .container-footer {
-    flex-wrap: wrap;
-    gap: 24px;
-    max-width: 552px;
   }
 
   .send-email-input {
@@ -1080,8 +1112,8 @@ img {
     transition: color var(--transition-duration-and-func);
   }
 
-  .header-container {
-    padding-top: 0;
+  .current {
+    color: var(--pressed-state-color);
   }
 
   .address-list {
@@ -1090,6 +1122,7 @@ img {
   }
 
   .header-contact {
+    font-size: var(--main-font-size);
     line-height: var(--main-line-height);
     letter-spacing: 0.02em;
     color: var(--primary-text-color);
@@ -1122,6 +1155,10 @@ img {
     margin-bottom: 48px;
   }
 
+  .content-direction {
+    font-weight: 400px;
+  }
+
   .box-icon-directions {
     display: flex;
     justify-content: center;
@@ -1133,9 +1170,14 @@ img {
     margin-bottom: 8px;
   }
 
+  .list-directions {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+  }
+
   .list-directions-item {
     width: 264px;
-    margin-bottom: 0;
   }
 
   .title-direction {
@@ -1154,12 +1196,20 @@ img {
     gap: 24px;
   }
 
+  .team-list {
+    gap: 24px;
+  }
+
   .team-list-item {
     width: calc((100% - 72px) / 4);
   }
 
   .container-customers-tablet {
     width: 100%;
+  }
+
+  .customers-list {
+    gap: 24px;
   }
 
   .customers-list-item {
@@ -1185,6 +1235,7 @@ img {
 
   .footer-form-wrapper {
     margin-left: 80px;
+    margin-top: 0;
   }
 
   .footer-discription {
